refactor: Remove server-side code and adjust project structure for Vite integration
- Deleted server-related files and configurations, including Express server setup and TRPC integration.
- Updated package.json scripts to use Vite for development and build processes.
- Adjusted TypeScript configuration to reflect changes in project structure.
- Modified Vercel configuration for static site deployment.
- Refactored client-side code to connect directly to the backend API without server-side middleware.

--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,10 @@
 {
   "version": 2,
-  "buildCommand": "pnpm build:vercel",
+  "buildCommand": "pnpm build",
   "installCommand": "pnpm install",
-  "framework": null,
-  "outputDirectory": "dist/public",
+  "framework": "vite",
+  "outputDirectory": "dist",
   "rewrites": [
-    {
-      "source": "/api/trpc/(.*)",
-      "destination": "/api/server"
-    },
-    {
-      "source": "/api/(.*)",
-      "destination": "/api/server"
-    },
     {
       "source": "/(.*)",
       "destination": "/index.html"
